--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
-    <body>
-        <p>Welcome the chat app</p>
-        <ol id="messages">
+    <body class="chat">
+        <div class="chat__sidebar">
+            <h3>People</h3>
+            <div id="users"></div>
+        </div>
+        <div class="chat__main">
+            <ol id="messages" class="chat__messages">
             
-        </ol>
-        <form id="message-form">
-            <input name="message" type="text" placeholder="Message"/>
-            <button>Send</button>
-        </form>
-        <button id="send-location">Send Location</button>
+            </ol>
+            <div class="chat__footer">
+                <form id="message-form">
+                    <input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+                    <button>Send</button>
+                </form>
+                <button id="send-location">Send Location</button>
+            </div>
+            
+        </div>
+
         <script src="/socket.io/socket.io.js"></script>
         <script src="./js/libs/jquery-3.3.1.min.js"></script>
         <script src="./js/index.js"></script>
